[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'regex_util'
version = '2024.0.0'
dependencies = ['google-re2']
requires-python = '>=3.12'

[project.scripts]
regex-102 = 'regex_util:app.main'

[tool.setuptools.packages.find]
where = ["src"]
include = ["regex_util*"]
exclude = [""]
namespaces = true
