[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'regex102'
version = '2024.0.0'
dependencies = ['google-re2']
requires-python = '>=3.12'

[project.scripts]
regex-102 = 'regex102:app.main'

[tool.setuptools.packages.find]
where = ["src"]
include = ["regex102*"]
exclude = [""]
namespaces = true
